--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@skyware/jetstream": "^0.1.9",
     "@types/node": "^22.7.6",
+    "@xenova/transformers": "^2.17.2",
     "better-queue": "^3.8.12",
     "bullmq": "^5.20.0",
     "debug": "^4.3.7",
