--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "firehose": "tsx -r dotenv/config lib/firehose.ts",
     "worker": "tsx -r dotenv/config lib/worker.ts",
-    "dashboard": "tsx -r dotenv/config lib/dashboard.ts"
+    "dashboard": "tsx -r dotenv/config lib/dashboard.ts",
+    "start": "concurrently npm:firehose npm:worker npm:dashboard"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "@xenova/transformers": "^2.17.2",
     "better-queue": "^3.8.12",
     "bullmq": "^5.20.0",
+    "concurrently": "^9.1.0",
     "debug": "^4.3.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
