--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .venv
-
+conf
 # Logs
 logs
 *.log
@@ -8,6 +8,9 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+__pycache__
+session.txt
+models
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
