--- a/docker-firehose/Dockerfile
+++ b/docker-firehose/Dockerfile
@@ -2,10 +2,10 @@ FROM node:lts
 
 WORKDIR /xblock
 
-COPY ../package-lock.json .
+COPY ./package-lock.json .
 
-COPY ../package.json .
+COPY ./package.json .
 
 RUN npm ci
 
-COPY ../lib /xblock/lib
+COPY ./lib /xblock/lib
