--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,8 +24,8 @@ services:
       - redis
     command: npm run firehose
 
-  worker:
-    container_name: worker
+  worker-0:
+    container_name: worker-0
     image: aendra/xblock-worker-gpu:latest
     ipc: host
     build: .
@@ -43,7 +43,29 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              count: all
+              device_ids: ['0']
+              capabilities: [gpu]
+
+  worker-1:
+    container_name: worker-1
+    image: aendra/xblock-worker-gpu:latest
+    ipc: host
+    build: .
+    env_file:
+      - .env
+    depends_on:
+      - redis
+      - firehose
+    command: python3 processor/worker.py
+    volumes:
+      - ./model:/xblock/model
+      - ./models:/xblock/models
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              device_ids: ['1']
               capabilities: [gpu]
 
 volumes:
